@@ -1,3 +1,9 @@
+2006-12-15  Guillaume Desmottes <cass@skynet.be>
+
+	* src/fe-gnome/navigation-tree.c:
+	  - Fix regressions with autojoin and autoconnect.
+	    Bug #385515.
+
 2006-12-15  David Trowbridge <trowbrds@gmail.com>
 
 	* src/fe-gnome/navigation-tree.c:
